--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>maven-web-project Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	<maven.compiler.source>1.8</maven.compiler.source>
-  	<maven.compiler.target>1.8</maven.compiler.target>
-
+	<properties>
+	    <maven.compiler.source>1.8</maven.compiler.source>
+	    <maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
 	<properties>
 		<!-- Spring test requires 1.7 onwards. don't down grade version -->
-		<jdk.version>1.8.0</jdk.version>
+		
 		<spring.version>4.1.4.RELEASE</spring.version>
 		<junit.version>4.13.2</junit.version>
 		<log4j.version>1.2.17</log4j.version>
