--- a/pom.xml
+++ b/pom.xml
@@ -7,26 +7,28 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>maven-web-project Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-	   	<maven.compiler.target>1.8</maven.compiler.target>
 		<!-- Spring test requires 1.7 onwards. don't down grade version -->
+		<!-- <jdk.version>1.6</jdk.version> -->
 		<spring.version>4.1.4.RELEASE</spring.version>
-		<junit.version>4.13.2</junit.version>
+		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 	</properties>
+
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
+
 		<dependency>
-		    <groupId>junit</groupId>
-		    <artifactId>junit</artifactId>
-		    <version>4.13.2</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20230227</version>
+			<version>20160212</version>
 		</dependency>
 
 		<dependency>
@@ -52,13 +54,13 @@
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
-			<version>8.0.1</version>
+			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>4.0.1</version>
+			<version>3.1.0</version>
 		</dependency>
 		<!-- http://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
 		<dependency>
